--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <h1>YOUR NAME</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <video src="https://www.youtube.com/watch?v=arhHgfkcFbk" controls/>
 </body>
  
 </html>
